
Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved
* allow relative font size for sub and sup to be set independently; support combined setting for backwards compatibility

Bug Fixes::

* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
* major improvement to OTF support following release of ttfunk 1.8.0 (automatic transitive dependency of prawn)

== 2.3.19 (2024-10-11) - @mojavelinux

Improvements::

* replace OpenStruct with internal ThemeData class for storing theme data (#2535)

Bug Fixes::

* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
* don't allow AsciiDoc table cell to overrun bottom of page on which it fits (#2538)
* don't look for NULL glyph in fallback font as this can impact line height (#2541)

=== Details

{url-repo}/releases/tag/v2.3.19[git tag] | {url-repo}/compare/v2.3.18\...v2.3.19[full diff]

== 2.3.18 (2024-07-27) - @mojavelinux

Bug Fixes::

* position foreground image correctly when page layout changes (#2528)

Compliance::
